--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<h2>{{ Daniel Otaviano dos Santos }}.</h2>
-<h3>{{ RA-1800328 }}</h3>
+<h2>{{ title }}.</h2>
+<h3>{{ message}}</h3>
 
 <address>
     Daniel Otaviano dos Santos<br />
