--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -6,7 +6,7 @@
 <h3>{{ message}}</h3>
 
 <address>
-    Daniel Otaviano dos Santos<br />
+    Daniel Otaviano dos Santos RA 1800328 <br />
     Rua paraná, 098343-942<br />
     <abbr title="Telefone">Tel:</abbr>
     4002-8922
