--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -2,9 +2,10 @@
 
 {% block content %}
 
-<h2>{{ Daniel Otaviano dos Santos }}.</h2>
-<h3>{{ RA-1800328 }}</h3>
+<h2>{{ title }}.</h2>
+<h3>{{ message }}</h3>
 
 <p>Esta aplicação gerencia vestibulares.</p>
+<p> Daniel Otaviano dos Santos RA 1800328 </p>
 
 {% endblock %}
